// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormikMaskedTextField /> renders correctly as a field component 1`] = `
<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="ms-TextField root-54"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <label
        className="ms-Label root-65"
        htmlFor="TextField12"
        id="TextFieldLabel14"
      >
        Masked
      </label>
      <div
        className="ms-TextField-fieldGroup fieldGroup-55"
      >
        <input
          aria-invalid={false}
          aria-labelledby="TextFieldLabel14"
          className="ms-TextField-field field-56"
          id="TextField12"
          name="masked"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="(___) ___ - ____"
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`<FormikTextField /> renders correctly as a field component 1`] = `
<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="ms-TextField root-54"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <label
        className="ms-Label root-65"
        htmlFor="TextField0"
        id="TextFieldLabel2"
      >
        Email
      </label>
      <div
        className="ms-TextField-fieldGroup fieldGroup-55"
      >
        <input
          aria-invalid={false}
          aria-labelledby="TextFieldLabel2"
          className="ms-TextField-field field-56"
          id="TextField0"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          type="text"
          value="foo@bar.com"
        />
      </div>
    </div>
  </div>
</form>
`;
